[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/Early access RPG World/tree 64x64.png" type="Texture" id=1]
[ext_resource path="res://additional scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/DiloWorld-mLJLv.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://my themes/button_theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=2]
resource_name = "tree_updown"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 68, 481 ), Vector2( 68, 478 ) ]
}

[node name="menuroot" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1020.0
margin_bottom = 599.0
color = Color( 0.662745, 0.698039, 0.356863, 1 )

[node name="header" type="RichTextLabel" parent="background"]
margin_left = 304.0
margin_top = 11.0
margin_right = 816.0
margin_bottom = 71.0
custom_fonts/normal_font = SubResource( 1 )
text = "Hey Buddy - A Top down Adventure Game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 423.0
margin_top = 192.0
margin_right = 539.0
margin_bottom = 251.0
rect_scale = Vector2( 1.64492, 1.44 )

[node name="play" type="Button" parent="VBoxContainer"]
margin_right = 116.0
margin_bottom = 15.0
focus_neighbour_top = NodePath("../exit")
theme = ExtResource( 6 )
text = "Play"
expand_icon = true

[node name="help" type="Button" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 116.0
margin_bottom = 34.0
theme = ExtResource( 6 )
text = "Help"
expand_icon = true

[node name="exit" type="Button" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 116.0
margin_bottom = 53.0
focus_neighbour_bottom = NodePath("../play")
theme = ExtResource( 6 )
text = "Exit"
expand_icon = true

[node name="Tree64X64" type="Sprite" parent="."]
position = Vector2( 68, 480.596 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tree64X64"]
anims/tree_updown = SubResource( 2 )

[connection signal="pressed" from="VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
